Fix spacing issues

--- a/site/pages/privacy-policy/style.css
+++ b/site/pages/privacy-policy/style.css
@@ -19,14 +19,14 @@
 
 .simpleHeading {
   font-size: 16px;
-  line-height: 1;
+  line-height: 1.2;
   font-family: 'ProximaNova-Bold', sans-serif;
 }
 
 .largeSimpleHeading {
   composes: serif from '../../css/typography/_fonts.css';
   font-size: 20px;
-  line-height: 1;
+  line-height: 1.2;
   margin-bottom: 10px;
 }
 
@@ -56,6 +56,7 @@
 
 .box {
   display: flex;
+  align-items: baseline;
 }
 
 .numberContainer {
@@ -65,17 +66,18 @@
 .number {
   composes: boldSansSerif from '../../css/typography/_fonts.css';
   font-size: 16px;
-  line-height: 1.3;
-  font-weight: bold;
-  padding: 6px 0 0;
-  border-bottom: 5px solid badgerRed;
+  line-height: 1.1;
+  padding: 0;
+  border-bottom: 5px solid #FC1D42;
   display: block;
+  position: relative;
+  top: -9px;
 }
 
 .statementNumber {
   composes: number;
   border-bottom: 0;
-  padding-top: 3px;
+  top: 0;
 }
 
 .underline {
